Fix srcset behavior on mobile. Use aspect-ratio for images

--- a/src/templates/layouts/styles.css
+++ b/src/templates/layouts/styles.css
@@ -131,24 +131,13 @@ h1 {
     text-decoration: overline dotted;
 }
 
-.detail-image-wrapper {
-    position: relative;
-    height: 0;
-    width: 100%;
-    margin: 1rem 0;
-}
-
-.detail-image-wrapper:first-child {
-    margin-top: 0;
-
-}
-
 .detail-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 100%;
-    height: auto;
+    margin: 1rem 0;
+    width: 100%;
+}
+
+.detail-image:first-child {
+    margin-top: 0;
 }
 
 @media only screen and (min-width: 768px) {
@@ -179,6 +168,10 @@ h1 {
 
     .detail-mode.main-content {
         visibility: unset;
+    }
+
+    .detail-link:hover {
+        opacity: 0.5;
     }
 
     .detail-mode .detail-link {
